--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('chatbot') }}">{{ ux_icon('fluent:bot-24-filled', { height: '20px', width: '20px' }) }} Web Summer Camp Bot</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('youtube') }}">{{ ux_icon('bi:youtube', { height: '20px', width: '20px' }) }} YouTube Transcript Bot</a>
+                        </li>
                     </ul>
                 </div>
             </div>
